@@ -47,6 +47,8 @@ The node supports quite a few options.
 <dt><code>graph_title</code><dd>The title of the graph, defaults to the servicename.</dd>
 <dt><code>create_args</code><dd>If set, the arguments will be passed on to rrdcreate.</dd>
 <dt><code>graph_args</code><dd>If set, the arguments will be passed on to rrdgraph.</dd>
+<dt><code>graph_width</code><dd>Sets the width (in pixels) of the graph. Defaults to 400.</dd>
+<dt><code>graph_height</code><dd>Sets the height (in pixels) of the graph. Defaults to 175.</dd>
 <dt><code>graph_order</code><dd>In witch order to draw the datasources. Can also include path aliases on the form alias=domain;host:graph.datasource. See further down for details.</dd>
 <dt><code>graph_vlabel</code><dd>Y-axis label of the graph. </dd>
 <dt><code>graph_vtitle</code><dd>Y-axis label of the graph. NOTE: Deprecated, use graph_vlabel.</dd>
