@@ -4,6 +4,9 @@ package Munin;
 # $Id$
 #
 # $Log$
+# Revision 1.16  2004/09/01 18:30:21  jimmyo
+# Added new options "graph_height" and "graph_width", to beter control size.
+#
 # Revision 1.15  2004/08/23 10:01:07  jimmyo
 # Better error handling when fetching data from RRD files.
 #
@@ -162,7 +165,7 @@ my @legal = ("tmpldir", "ncsa", "ncsa_server", "ncsa_config", "rundir",
 	"htaccess", "warn", "use_default_name", "use_node_name", "port", 
 	"graph_noscale", "nsca", "nsca_server", "nsca_config", "extinfo", 
 	"fetch_data", "filename", "max_processes", "nagios", "info", "graph_info",
-	"graph_category", "graph_strategy",
+	"graph_category", "graph_strategy", "graph_width", "graph_height"
     );
 
 
