@@ -5,6 +5,7 @@ munin (work)
   * Added plugin linux/df_abs
   * Sanitise incoming fieldnames a bit better.
   * Small layout improvements.
+  * Added new options "graph_height" and "graph_width", to beter control size.
   
 munin (1.1.3)
 
